--- a/index.html
+++ b/index.html
@@ -21,6 +21,72 @@
         </a>
     </div>
 
+    <fieldset class="slideshow">
+
+      <!-- Slide 1 -->
+      <label class="slide-button" for="slideCheckbox1">Intro</label>
+      <input type="radio" id="slideCheckbox1" name="slide" checked></input>
+      <div class="slide">
+        <div class="slide__content">
+          <h1>Slideshow Concept (No JS)</h1>
+          <p>A pure CSS and HTML slideshow concept.</p>
+          <p>To add or remove slides:</p>
+          <ul>
+            <li>Add a new slide template in the HTML</li>
+            <li>Update the <code>$slide-count</code> SCSS variable</li>
+            <li>Tab colours: Update the <code>$c-slides</code> SCSS variable</li>
+            <li>Slide popout images: Update the <code>$b-slides</code> SCSS variable</li>
+          </ul>
+          <p>Use the tabs below to change slide.</p>
+          <p>Et voila.</p>
+        </div>
+      </div>
+
+      <!-- Slide 2 -->
+      <label class="slide-button" for="slideCheckbox2">More</label>
+      <input type="radio" id="slideCheckbox2" name="slide"></input>
+      <div class="slide">
+        <div class="slide__content">
+          <h1>More</h1>
+          <p>More here</p>
+        </div>
+      </div>
+
+      <!-- Slide 3 -->
+      <label class="slide-button" for="slideCheckbox3">Yet More</label>
+      <input type="radio" id="slideCheckbox3" name="slide"></input>
+      <div class="slide">
+        <div class="slide__content">
+          <h1>Yet More</h1>
+          <p>Yet more here</p>
+        </div>
+      </div>
+
+      <!-- Slide 4 -->
+      <label class="slide-button" for="slideCheckbox4">Zzz</label>
+      <input type="radio" id="slideCheckbox4" name="slide"></input>
+      <div class="slide">
+        <div class="slide__content">
+          <h1>Zzz</h1>
+          <p>Yada yada</p>
+        </div>
+      </div>
+
+      <!-- Slide 5 -->
+      <label class="slide-button" for="slideCheckbox5">The End</label>
+      <input type="radio" id="slideCheckbox5" name="slide"></input>
+      <div class="slide">
+        <div class="slide__content">
+          <h1>The end</h1>
+          <p>It's over</p>
+        </div>
+      </div>
+
+      <!-- Add more slides here! -->
+
+    </fieldset>
+
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
